# Sigmoidal_Waveform_Approximation

./: .gitignore  README.md  falling_input.off  makefile  rising_input.off  run_tool_on_vm.py  sis_b_rising_input.off
benchmarking/: InA.csv  InB.csv  benchmakring_circuit_inverters_100stages.txt  benchmarking_circuit.txt  benchmarking_circuit_ISCAS85_c1355.txt  benchmarking_circuit_ISCAS85_c17.txt  benchmarking_circuit_ISCAS85_c1908.txt  benchmarking_circuit_ISCAS85_c432.txt  benchmarking_circuit_ISCAS85_c499.txt  benchmarking_circuit_ISCAS85_c6288.txt  benchmarking_circuit_ISCAS85_c880.txt  benchmarking_circuit_altered_inputs.txt  benchmarking_circuit_altered_inputs_b.txt  benchmarking_circuit_b.txt  benchmarking_circuit_input_b.txt  benchmarking_circuit_inverter_ring.txt  benchmarking_circuit_inverter_ring_asymmetric.txt  benchmarking_circuit_inverter_ring_symmetric.txt  benchmarking_circuit_inverters.txt  benchmarking_circuit_inverters_100_stages.txt  benchmarking_circuit_latch.txt  benchmarking_circuit_mis_test.txt  benchmarking_circuit_xor.txt  (+1 more)
src/: cgal_test.h  (+37 more)
testing/: CMakeLists.txt  gate_parsing_test.txt  in1.txt  intial_ values_test.txt  intial_values_test.txt  multiple_inputs.txt  mutliple_gates_same_output_node.txt
testing/test_data/: gate_parsing_test.txt  in1.txt  in2.txt  in_rising_edge.txt  initial_values_test_oscillation.txt  input_and_gate_same_output_node.txt  intial_values_test.txt  tf_model_test.txt
testing/test_data/tfs/: MIS_Input_A_first_rr.txt  MIS_Input_B_first_rr.txt  SIS_Input_A_falling.txt  SIS_Input_A_rising.txt  SIS_Input_B_rising.txt
(+105 files in other folders)
